opensource/loki/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-service
spec:
  selector:
    app: loki
  ports:
  - protocol: TCP
    name: loki-port
    port: 3100
    targetPort: 3100
#  type: LoadBalancer
